# lolesport_ical_scraper

./: .gitignore  README.md  pyproject.toml
.github/: update.yml
.github/workflows/: publish-ics.yml
data/: history.json
docs/: feed.ics  index.html
lolesports_ical/: ical.py  main.py  models.py  scrape.py  util.py
tests/: test_feed_diff.py  test_html_parser.py  test_uid_and_time.py
tests/fixtures/: schedule_apollo_fixture.html  schedule_fixture.html
